# ift6113_2021

./: readme.md
hw1_cpp/: CMakeLists.txt  main.cpp  main_butterfly.cpp  main_loop.cpp  mainlb.cpp  mains.cpp
hw2_cpp/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp  readme.md
hw3_cpp/: CMakeLists.txt  arap.cpp  biharmonic.cpp  readme.md
input/: fixedindices-armadillo_1k.off.txt  fixedindices-bar2.off.txt  fixedpositions-armadillo_1k.off.txt  fixedpositions-bar2.off.txt  mine-fixedpositions-bar2.off.txt
